--- a/shop/style/style.css
+++ b/shop/style/style.css
@@ -1,11 +1,13 @@
 *{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
 }
 
 .wrap{
@@ -76,9 +78,9 @@ body{
 
 .content{
     flex-grow: 1;
-    padding: 65px 0 95px 0;
 }
 .productCategories{
+    margin-top: 65px;
     display: flex;
     flex-wrap: wrap;    
     justify-content: space-between;
@@ -131,7 +133,7 @@ body{
 }
 
 .feturedItems{
-    padding-top: 96px;
+    margin: 95px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -144,12 +146,12 @@ body{
 }
 .fearutedItems_text{
     margin-top: 6px;
+    margin-bottom: 48px;
     font-size: 14px;
     line-height: 17px;
     color: #9F9F9F;
 }
 .productCardsBox{
-    margin-top: 48px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -167,6 +169,14 @@ body{
     font-size: 13px;
     line-height: 16px;
     color: #000000;
+}
+.productLink{
+    text-decoration: none;    
+    color: #000000;
+}
+.productLink:hover{
+    text-decoration: underline;
+    color: #F16D7F;    
 }
 .productCard_text{
     margin-top: 12px;
@@ -205,14 +215,14 @@ body{
     flex-direction: column;
     align-items: center;
 }
-.feature_item_heading{
+.feature_item__heading{
     font-weight: normal;
     margin-top: 19px;
     font-size: 20px;
     line-height: 24px;
     color: #FBFBFB;
 }
-.feature_item_text{
+.feature_item__text{
     margin-top: 16px;
     font-weight: 300;
     font-size: 14px;
@@ -240,7 +250,7 @@ body{
     align-items: center;
     width: 360px;
 }
-.subscribe_quoteBox_text{
+.subscribe_quoteBox__text{
     margin-top: 30px;
     text-align: center;
     font-size: 20px;
@@ -257,7 +267,7 @@ body{
     line-height: 40px;
     color: #222224;
 }
-.subscribe_buttonBox_text{
+.subscribe_buttonBox__text{
     font-size: 18px;
     line-height: 30px;
     color: #222224;
@@ -265,7 +275,7 @@ body{
 .subscribe_form{
     margin-top: 32px;
 }
-.subscribe_form_input{
+.subscribe_form__input{
     font-size: 14px;
     line-height: 17px;
     width: 256px;
@@ -276,7 +286,7 @@ body{
     border-bottom-left-radius: 25px;
     background-color: #E1E1E1;
 }
-.subscribe_form_input::placeholder{
+.subscribe_form__input::placeholder{
     color: #222224;
     opacity: 0.67;
 }
@@ -311,4 +321,175 @@ body{
     width: 148px;
     display: flex;
     justify-content: space-between;
+}
+
+.crumbs{
+    background-color: #F8F3F4;
+    padding: 60px 0;
+}
+.crumbs_wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.crumbs_heading{
+    font-size: 24px;
+    line-height: 29px;
+    color: #F16D7F;    
+}
+.crumbs_list{
+    display: flex;
+    list-style: none;
+}
+.crumbs_item::before{
+    content: "/";
+    margin: 0 5px;
+}
+.crumbs_item:first-child:before{
+    content: none;
+}
+.crumbs_link{
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #636363;
+    text-decoration: none;
+}
+.crumbs_link:hover{
+    text-decoration: underline;
+    color: #F16D7F;
+}
+.crumbs_link__current{
+    font-weight: bold;
+    color: #F16D7F;
+}
+
+.catalog_wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 55px;
+    margin-bottom: 95px;
+}
+.catalog_filter{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 64px;
+}
+.catalog_filter__button{    
+    margin-left: 15px;
+    background: none;
+    border: none;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+}
+.catalog_filter__button::after{
+    content: url(../img/filter_icon.svg);
+    margin-left: 10px;
+}
+.filter_list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    gap: 28px;
+}
+.filter_item{
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+}
+.filter_item::after{
+    content: url(../img/filter_arrowDown.svg);
+    margin-left: 10px;
+}
+.pageScroll{
+    margin-top: 48px;
+}
+
+.productFoto{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #F7F7F7;
+}
+.productFoto_scrollButton{
+    padding: 8px;
+    background-color: rgba(42, 42, 42, 0.15);
+    border: none;
+}
+.productFoto_img{
+    margin-top: 11px;
+    margin-bottom: 42px;
+}
+.productInfo{
+    flex-direction: column;
+    position: relative;
+    top: -75px;
+    background-color: #FFFFFF;
+    border: 1px solid #EAEAEA;
+    padding: 65px 250px;
+}
+.productInfo_h3{
+    text-align: center;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+}
+.productInfo_hr1{
+    box-sizing: border-box;
+    width: 63px;
+    border: none;
+    border-top: 3px solid #EF5B70;
+    margin: 12px auto;
+}
+.productInfo_h2{
+    text-align: center;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    color: #4D4D4D;
+}
+.productInfo_text{
+    margin-top: 48px;
+    text-align: center;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;    
+    color: #5E5E5E;
+}
+.productInfo_price{
+    margin-top: 32px;
+    text-align: center;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #EF5B70;
+}
+.productInfo_hr2{
+    border: none;
+    border-top: 1px solid #EAEAEA;
+    margin: 65px auto;
+}
+.addToCardButton{
+    display: flex;
+    align-items: center;
+    background: none;
+    border: 1px solid;
+    margin: 48px auto 0 auto;
+    padding-right: 55px;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F26376;   
+}
+.addToCardButton img{
+    margin: 15px 23px 9px 24px;
+}
+
+.productCardsBox_wrap{
+    margin: 53px 0 128px 0;
 }
