--- a/shop/style/blocks/_crumbs.scss
+++ b/shop/style/blocks/_crumbs.scss
@@ -1,40 +1,53 @@
-.crumbs{
+.crumbs {
     background-color: #F8F3F4;
     padding: 60px 0;
-    &__wrap{
+
+    &__wrap {
         display: flex;
-        justify-content: space-between; 
+        justify-content: space-between;
     }
-    &__heading{
+
+    &__heading {
         font-weight: 400;
         font-size: 24px;
         line-height: 29px;
         color: $main-color;
     }
-    &__list{
+
+    &__list {
         display: flex;
-        list-style: none;        
+        list-style: none;
     }
-    &__item{
-        &::before{
+
+    &__item {
+        &::before {
             content: "/";
             margin: 0 5px;
         }
-        &:first-child:before{
+
+        &:first-child:before {
             content: none;
         }
     }
-    &__link{
+
+    &__link {
+        @include button-transition();
         @include text-font-style();
         color: #636363;
         text-decoration: none;
-        &:hover{
+
+        &:hover {
             text-decoration: underline;
             color: $main-color;
         }
-        &_current{
+
+        &_current {
             font-weight: bold;
             color: $main-color;
+
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
 }
