--- a/shop/style/blocks/_promo.scss
+++ b/shop/style/blocks/_promo.scss
@@ -1,7 +1,7 @@
-.promo{
+.promo {
     background-color: #F1E4E6;
-    
-    &__wrap{    
+
+    &__wrap {
         min-height: 765px;
         display: flex;
         align-items: center;
@@ -10,23 +10,26 @@
         background-position-x: -225px;
         background-repeat: no-repeat;
     }
-    &__h1{
+
+    &__h1 {
         box-sizing: border-box;
         margin-right: 90px;
         padding-left: 16px;
         border-left: 12px solid $main-color;
         font-weight: bold;
         font-size: 32px;
-        line-height: 38px;    
+        line-height: 38px;
         color: #222222;
+    }
 
-        &_size{
+    &__header-span {
+        &_size_large {
             font-weight: 900;
             font-size: 48px;
             line-height: 58px;
         }
 
-        &_color{
+        &_color_main {
             color: $main-color;
         }
     }
