--- a/shop/style/style.css
+++ b/shop/style/style.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -25,31 +32,64 @@
   gap: 33px;
 }
 
-.main-nav__item svg {
+.main-nav__button {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  border: none;
+  background-color: transparent;
   fill: #FFFFFF;
 }
 
-.main-nav__item:hover svg {
+.main-nav__button:hover {
   fill: #F16D7F;
 }
 
-.main-nav__button {
-  border: none;
-  background-color: transparent;
-}
-
 .main-nav__link {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   text-decoration: none;
-}
-
-.main-nav__cart-link {
-  position: relative;
+  fill: #FFFFFF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.main-nav__cart-link span {
+.main-nav__link_type_logo:hover {
+  -webkit-animation: rotate-center 0.6s ease-in-out both;
+  animation: rotate-center 0.6s ease-in-out both;
+}
+
+@-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.main-nav__link_type_cart {
+  position: relative;
+}
+
+.main-nav__link_type_cart span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -70,6 +110,121 @@
   width: 19px;
   height: 19px;
   border-radius: 50%;
+}
+
+.main-nav__link_type_cart:hover span {
+  -webkit-animation: bounce-in-top 1.1s both;
+  animation: bounce-in-top 1.1s both;
+}
+
+@-webkit-keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-65px);
+    transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+
+@keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-65px);
+    transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+
+.main-nav__link:hover {
+  fill: #F16D7F;
 }
 
 .promo {
@@ -104,13 +259,13 @@
   color: #222222;
 }
 
-.promo__h1_size {
+.promo__header-span_size_large {
   font-weight: 900;
   font-size: 48px;
   line-height: 58px;
 }
 
-.promo__h1_color {
+.promo__header-span_color_main {
   color: #F16D7F;
 }
 
@@ -124,7 +279,7 @@
   gap: 30px;
 }
 
-.product-categories__box_size_little {
+.product-categories__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,20 +289,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.product-categories__box_size_little {
   width: 360px;
   height: 260px;
 }
 
 .product-categories__box_size_large {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 100%;
   height: 180px;
 }
@@ -175,7 +324,7 @@
   color: #FFFFFF;
 }
 
-.product-categories__text_color {
+.product-categories__text span {
   font-weight: bold;
   font-size: 24px;
   line-height: 29px;
@@ -247,7 +396,9 @@
   color: #5D5D5D;
 }
 
-.product-list__text_price {
+.product-list__price {
+  margin-left: 16px;
+  margin-right: 16px;
   margin-top: 18px;
   margin-bottom: 20px;
   font-size: 16px;
@@ -256,6 +407,10 @@
 }
 
 .product-list__link {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   text-decoration: none;
   color: #000000;
 }
@@ -275,12 +430,17 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   color: #F26376;
   text-decoration: none;
   font-size: 16px;
   line-height: 19px;
   border: 1px solid #FF6A6A;
   background-color: #FFFFFF;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
   margin-top: 48px;
   padding: 15px 39px;
 }
@@ -288,9 +448,6 @@
 .product-list__button:hover {
   color: #FFFFFF;
   background-color: #F16D7F;
-}
-
-.product-list__button:hover svg {
   fill: #FFFFFF;
 }
 
@@ -453,6 +610,10 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   width: 100px;
   height: 49px;
   padding: 0;
@@ -461,6 +622,10 @@
   border-bottom-right-radius: 25px;
   background-color: #F16D7F;
   color: #FFFFFF;
+}
+
+.feedback__button:hover {
+  background: #D73C3C;
 }
 
 .feedback__heading {
@@ -514,6 +679,10 @@
 }
 
 .footer__link {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -574,6 +743,10 @@
 }
 
 .crumbs__link {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
@@ -589,6 +762,10 @@
 .crumbs__link_current {
   font-weight: bold;
   color: #F16D7F;
+}
+
+.crumbs__link_current:hover {
+  text-decoration: none;
 }
 
 .features {
@@ -645,13 +822,6 @@
   margin-top: 16px;
   text-align: center;
   color: #FBFBFB;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 body {
@@ -724,19 +894,16 @@ body {
   border: none;
   font-weight: 600;
   color: #000000;
+  fill: #000000;
 }
 
 .filter__button svg {
   margin-left: 10px;
-  fill: #000000;
 }
 
 .filter__button_type_in-item {
   font-weight: 300;
   color: #6F6E6E;
-}
-
-.filter__button_type_in-item svg {
   fill: #6F6E6E;
 }
 
@@ -802,10 +969,37 @@ body {
 }
 
 .pagination__button {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   background: none;
   border: none;
   font-size: 17px;
-  color: #EF5B70;
+  color: #C4C4C4;
+}
+
+.pagination__button:hover {
+  fill: #F16D7F;
+  color: #000000;
+}
+
+.pagination__button_status_active {
+  color: #F16D7F;
+}
+
+.pagination__button_status_active:hover {
+  color: #F16D7F;
+}
+
+.pagination__button_status_disabled {
+  fill: #C4C4C4;
+  color: #C4C4C4;
+}
+
+.pagination__button_status_disabled:hover {
+  fill: #C4C4C4;
+  color: #C4C4C4;
 }
 
 .product-card__viewer {
@@ -822,16 +1016,17 @@ body {
 }
 
 .product-card__scroll-button {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   padding: 8px;
   background-color: rgba(42, 42, 42, 0.15);
   border: none;
-}
-
-.product-card__scroll-button svg {
   fill: #000000;
 }
 
-.product-card__scroll-button:hover svg {
+.product-card__scroll-button:hover {
   fill: #F16D7F;
 }
 
@@ -910,6 +1105,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   color: #F26376;
   text-decoration: none;
   font-size: 16px;
@@ -918,20 +1117,17 @@ body {
   background-color: #FFFFFF;
   margin: 48px auto 0 auto;
   padding-right: 55px;
+  fill: #EF5B70;
 }
 
 .product-card__button:hover {
   color: #FFFFFF;
   background-color: #F16D7F;
-}
-
-.product-card__button:hover svg {
   fill: #FFFFFF;
 }
 
 .product-card__button svg {
   margin: 15px 23px 9px 24px;
-  fill: #EF5B70;
 }
 
 .cart {
@@ -979,6 +1175,13 @@ body {
           justify-content: space-between;
 }
 
+.cart__button {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+}
+
 .cart__button_type_remove {
   position: absolute;
   top: 28px;
@@ -986,11 +1189,12 @@ body {
   width: 18px;
   height: 18px;
   border: none;
-  background: none;
+  background: transparent;
+  fill: #575757;
 }
 
-.cart__button_type_remove svg {
-  fill: #575757;
+.cart__button_type_remove:hover {
+  fill: #F16D7F;
 }
 
 .cart__button_type_cart-control {
@@ -1000,7 +1204,12 @@ body {
   padding: 16px 40px;
   color: #000000;
   border: 1px solid #A4A4A4;
-  background: none;
+  background: transparent;
+}
+
+.cart__button_type_cart-control:hover {
+  background-color: #F16D7F;
+  color: #FFFFFF;
 }
 
 .cart__heading {
@@ -1011,6 +1220,19 @@ body {
   margin-bottom: 42px;
 }
 
+.cart__link {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  text-decoration: none;
+  color: inherit;
+}
+
+.cart__link:hover {
+  color: #F16D7F;
+}
+
 .cart__text {
   margin-bottom: 6px;
   font-weight: 400;
@@ -1019,15 +1241,15 @@ body {
   color: #575757;
 }
 
-.cart__text_type_price {
+.cart__text-span_type_price {
   color: #EF5B70;
 }
 
-.cart__text_type_color, .cart__text_type_size {
+.cart__text-span_type_color, .cart__text-span_type_size {
   color: #6F6E6E;
 }
 
-.cart__text_type_quantity {
+.cart__text-span_type_quantity {
   color: #656565;
   margin-left: 24px;
   padding: 1px 16px;
@@ -1047,15 +1269,18 @@ body {
           flex-direction: column;
 }
 
-.input-form__wrap_type_input {
+.input-form__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 20px;
+}
+
+.input-form__wrap_type_input {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 20px;
 }
 
 .input-form__wrap_type_radio {
@@ -1100,6 +1325,13 @@ body {
   color: #222222;
 }
 
+.input-form__button {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+}
+
 .input-form__button_type_small {
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -1114,21 +1346,32 @@ body {
   margin-top: 23px;
 }
 
+.input-form__button_type_small:hover {
+  color: #FFFFFF;
+  background-color: #F16D7F;
+}
+
 .input-form__button_type_large {
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
   padding: 16px 29px;
-  border: none;
+  border: 1px solid #F16D7F;
   background-color: #F16D7F;
   font-weight: 400;
   color: #FFFFFF;
   margin-top: 39px;
+  fill: #FFFFFF;
 }
 
 .input-form__button_type_large svg {
-  fill: #FFFFFF;
   margin-left: 20px;
+}
+
+.input-form__button_type_large:hover {
+  fill: #F16D7F;
+  color: #F16D7F;
+  background-color: #FFFFFF;
 }
 
 .input-form__radio {
@@ -1253,6 +1496,10 @@ body {
 }
 
 .checkout-form__button {
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   margin-top: 17px;
   padding-top: 17px;
   padding-bottom: 17px;
@@ -1261,7 +1508,12 @@ body {
   line-height: 19px;
   color: #FFFFFF;
   background-color: #F16D7F;
-  border: none;
+  border: solid 1px #F16D7F;
+}
+
+.checkout-form__button:hover {
+  color: #F16D7F;
+  background-color: #FFFFFF;
 }
 
 .aside-info {
