--- a/shop/style/blocks/_main-nav.scss
+++ b/shop/style/blocks/_main-nav.scss
@@ -29,26 +29,18 @@
 
     &__link {
         @include button-transition();
+        transition: transform 0.3s;
         text-decoration: none;
         fill: $alt-color;
         display: flex;
 
+        &:hover {
+            fill: $main-color;
+        }
+
         &_type {
             &_logo:hover {
-                -webkit-animation: rotate-center 0.6s ease-in-out both;
-                animation: rotate-center 0.6s ease-in-out both;
-
-                @keyframes rotate-center {
-                    0% {
-                        -webkit-transform: rotate(0);
-                        transform: rotate(0);
-                    }
-
-                    100% {
-                        -webkit-transform: rotate(360deg);
-                        transform: rotate(360deg);
-                    }
-                }
+                transform: rotate(360deg);
             }
 
             &_cart {
@@ -197,9 +189,7 @@
 
         }
 
-
-        &:hover {
-            fill: $main-color;
-        }
     }
+
+
 }
