--- a/shop/style/style.css
+++ b/shop/style/style.css
@@ -51,6 +51,10 @@
   transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
   transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   text-decoration: none;
   fill: #FFFFFF;
   display: -webkit-box;
@@ -58,31 +62,13 @@
   display: flex;
 }
 
+.main-nav__link:hover {
+  fill: #F16D7F;
+}
+
 .main-nav__link_type_logo:hover {
-  -webkit-animation: rotate-center 0.6s ease-in-out both;
-  animation: rotate-center 0.6s ease-in-out both;
-}
-
-@-webkit-keyframes rotate-center {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes rotate-center {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .main-nav__link_type_cart {
@@ -223,10 +209,6 @@
   }
 }
 
-.main-nav__link:hover {
-  fill: #F16D7F;
-}
-
 .promo {
   background-color: #F1E4E6;
 }
@@ -351,6 +333,9 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
   list-style-type: none;
 }
@@ -358,6 +343,13 @@
 .product-list__item {
   width: 360px;
   background-color: #F8F8F8;
+  position: relative;
+}
+
+.product-list__item:hover .product-list__overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .product-list__h2 {
@@ -420,7 +412,7 @@
   color: #F16D7F;
 }
 
-.product-list__button {
+.product-list__browse-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -445,7 +437,7 @@
   padding: 15px 39px;
 }
 
-.product-list__button:hover {
+.product-list__browse-button:hover {
   color: #FFFFFF;
   background-color: #F16D7F;
   fill: #FFFFFF;
@@ -454,6 +446,52 @@
 .product-list__video {
   width: 360px;
   height: 420px;
+}
+
+.product-list__overlay {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  width: 360px;
+  height: 420px;
+  background-color: rgba(58, 56, 56, 0.86);
+}
+
+.product-list__overlay-button {
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 300;
+  -webkit-transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
+  transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
+  color: #FFFFFF;
+  fill: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+  padding: 11px 16px 8px 13px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product-list__overlay-button svg {
+  margin-right: 11px;
+}
+
+.product-list__overlay-button:hover {
+  fill: #F16D7F;
+  border-color: #F16D7F;
+  color: #F16D7F;
+  cursor: pointer;
 }
 
 .product-list_margin_product {
@@ -837,7 +875,7 @@ body {
 }
 
 .wrap {
-  width: 1140px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -1060,6 +1098,20 @@ body {
   font-weight: 300;
   text-align: center;
   color: #F16D7F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.product-card__h3::after {
+  content: '';
+  width: 63px;
+  border-top: 3px solid #EF5B70;
+  margin: 12px auto;
 }
 
 .product-card__text {
@@ -1078,19 +1130,18 @@ body {
   font-size: 24px;
   line-height: 29px;
   color: #EF5B70;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.product-card__hr {
-  border: none;
-}
-
-.product-card__hr_size_small {
-  width: 63px;
-  border-top: 3px solid #EF5B70;
-  margin: 12px auto;
-}
-
-.product-card__hr_size_large {
+.product-card__price::after {
+  content: '';
+  width: 100%;
   border-top: 1px solid #EAEAEA;
   margin: 65px auto;
 }
@@ -1489,9 +1540,9 @@ body {
   color: #F16D7F;
 }
 
-.checkout-form__hr {
-  margin-top: 21px;
-  border: none;
+.checkout-form__button-wrap {
+  padding-top: 21px;
+  margin-top: 17px;
   border-top: 1px solid #E2E2E2;
 }
 
@@ -1500,7 +1551,7 @@ body {
   transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
   transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
-  margin-top: 17px;
+  width: 100%;
   padding-top: 17px;
   padding-bottom: 17px;
   font-weight: 300;
