--- a/shop/style/style.scss
+++ b/shop/style/style.scss
@@ -59,7 +59,7 @@ body {
 }
 
 .wrap {
-    width: 1140px;
+    max-width: 1140px;
     margin: 0 auto;
 
     &_type {
@@ -97,7 +97,6 @@ body {
 .content {
     flex-grow: 1;
 }
-
 
 .filter {
     display: flex;
@@ -256,6 +255,15 @@ body {
         @include text-font-style();
         text-align: center;
         color: $main-color;
+        display: flex;
+        flex-direction: column;
+
+        &::after {
+            content: '';
+            width: 63px;
+            border-top: 3px solid #EF5B70;
+            margin: 12px auto;
+        }
     }
 
     &__text {
@@ -272,18 +280,12 @@ body {
         font-size: 24px;
         line-height: 29px;
         color: #EF5B70;
-    }
+        display: flex;
+        flex-direction: column;
 
-    &__hr {
-        border: none;
-
-        &_size_small {
-            width: 63px;
-            border-top: 3px solid #EF5B70;
-            margin: 12px auto;
-        }
-
-        &_size_large {
+        &::after {
+            content: '';
+            width: 100%;
             border-top: 1px solid #EAEAEA;
             margin: 65px auto;
         }
@@ -612,17 +614,18 @@ body {
                 color: #F16D7F;
             }
         }
+
     }
 
-    &__hr {
-        margin-top: 21px;
-        border: none;
+    &__button-wrap {
+        padding-top: 21px;
+        margin-top: 17px;
         border-top: 1px solid #E2E2E2;
     }
 
     &__button {
         @include button-transition();
-        margin-top: 17px;
+        width: 100%;
         padding-top: 17px;
         padding-bottom: 17px;
         font-weight: 300;
@@ -636,7 +639,9 @@ body {
             color: $main-color;
             background-color: $alt-color;
         }
+
     }
+
 }
 
 .aside-info {
