--- a/shop/style/blocks/_product-list.scss
+++ b/shop/style/blocks/_product-list.scss
@@ -1,89 +1,173 @@
-.product-list{
+.product-list {
     margin: 95px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    &__list{
+    &__list {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         gap: 30px;
         list-style-type: none;
     }
 
-    &__item{
+    &__item {
         width: 360px;
         background-color: #F8F8F8;
+        position: relative;
+
+        &:hover .product-list__overlay {
+            opacity: 1;
+        }
     }
 
-    &__h2{
+    &__h2 {
         font-weight: normal;
         font-size: 30px;
         line-height: 36px;
         color: #222222;
     }
 
-    &__h3{
+    &__h3 {
         font-weight: normal;
         font-size: 13px;
         line-height: 16px;
         color: #000000;
-        margin-top: 25px;        
+        margin-top: 25px;
         margin-left: 16px;
         margin-right: 16px;
     }
 
-    &__text{
-        @include text-font-style();        
-        &_place{
-            &_in-head{
+    &__text {
+        @include text-font-style();
+
+        &_place {
+            &_in-head {
                 margin-top: 6px;
                 margin-bottom: 48px;
                 color: #9F9F9F;
             }
-            &_in-item{
+
+            &_in-item {
                 margin-top: 12px;
                 margin-left: 16px;
                 margin-right: 16px;
                 color: #5D5D5D;
             }
         }
-        &_price{
-            margin-top: 18px;
-            margin-bottom: 20px;
-            font-size: 16px;
-            line-height: 19px;
-            color: $main-color;
-        }
     }
 
-    &__link{
-        text-decoration: none;    
+    &__price {
+        margin-left: 16px;
+        margin-right: 16px;
+        margin-top: 18px;
+        margin-bottom: 20px;
+        font-size: 16px;
+        line-height: 19px;
+        color: $main-color;
+    }
+
+    &__link {
+        @include button-transition();
+        text-decoration: none;
         color: #000000;
-        &:hover{            
+
+        &:hover {
             text-decoration: underline;
             color: $main-color;
         }
     }
-    
-    &__button{
+
+    &__browse-button {
         @include button-style();
+        @include button-transition();
         margin-top: 48px;
         padding: 15px 39px;
     }
 
-    &__video{
+    &__video {
         width: 360px;
         height: 420px;
     }
 
-    &_margin{
-        &_product{
+    &__overlay {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 360px;
+        height: 420px;
+        background-color: rgba(58, 56, 56, 0.86);
+        opacity: 0;
+        transition: opacity 1s;
+    }
+
+    &__overlay-button {
+        @include text-font-style;
+        @include button-transition;
+        color: $alt-color;
+        fill: $alt-color;
+        border: 1px solid $alt-color;
+        background-color: transparent;
+        padding: 11px 16px 8px 13px;
+        display: flex;
+        align-items: center;
+
+        svg {
+            margin-right: 11px;
+        }
+
+        &:hover {
+            fill: $main-color;
+            border-color: $main-color;
+            color: $main-color;
+            cursor: pointer;
+        }
+    }
+
+    &_margin {
+        &_product {
             margin: 128px auto;
         }
-        &_catalog{
+
+        &_catalog {
             margin-top: 55px;
             margin-bottom: 95px;
+        }
+    }
+}
+
+
+@media (max-width: 1160px) {
+    .product-list {
+        margin: 155px 0 65px 0;
+
+        &__list {
+            gap: 16px;
+        }
+
+        &__text {
+            &_place {
+                &_in-head {
+                    margin-top: 3px;
+                    margin-bottom: 72px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    .product-list {
+        margin: 64px 0 96px 0;
+
+        &__text {
+            &_place {
+                &_in-head {
+                    margin-bottom: 64px;
+                }
+            }
         }
     }
 }
